--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -1,59 +1,44 @@
-.row {
-    margin-bottom: 5px;
-}
-
 * {
 	margin: 0;
 }
+
 html, body {
 	height: 100%;
 }
+
 .wrapper {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin: 0 auto -120px; /* the bottom margin is the negative value of the footer's height */
+	margin: 0 auto -80px; /* the bottom margin is the negative value of the footer's height */
+	display: table;
 }
+
+.middleText {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+
 footer, .push {
-	height: 120px; /* '.push' must be the same height as 'footer' */
+	height: 80px; /* '.push' must be the same height as 'footer' */
 	background-color: gray;
 }
 
 span.glyphicon-plus {
-    font-size: 2.5em;
+    font-size: 1.6em;
 }
 
 span.glyphicon-edit {
-    font-size: 2.5em;
+    font-size: 1.6em;
 }
 
 span.glyphicon-trash {
-    font-size: 2.5em;
+    font-size: 1.6em;
 }
 
 .footerModal {
 	margin-top: 10px;
     width: 200px !important;
-    height: 80px !important;
-}
-
-#footerContainer {
-    width:100%;
-    text-align:center;
-}
-
-#footerLeft {
-    float:left;
-    width:225px;
-}
-
-#footerCenter {
-    display: inline-block;
-    margin:0 auto;
-    width:610px;
-}
-
-#footerRight {
-    float:right;
-    width:200px;
+    height: 60px !important;
 }
