--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -22,19 +22,22 @@ html, body {
 
 footer, .push {
 	height: 80px; /* '.push' must be the same height as 'footer' */
-	background-color: gray;
+	background-color: #AFAAAA;
 }
 
 span.glyphicon-plus {
     font-size: 1.6em;
+    color: white;
 }
 
 span.glyphicon-edit {
     font-size: 1.6em;
+    color: black;
 }
 
 span.glyphicon-trash {
     font-size: 1.6em;
+    color: black;
 }
 
 .footerModal {
