Icon color change.

--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -40,6 +40,10 @@ span.glyphicon-trash {
     color: black;
 }
 
+#edit-button.highlighted {
+    color: white;
+}
+
 .footerModal {
 	margin-top: 10px;
     width: 200px !important;
