--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -2,8 +2,8 @@ html, body {
 	height: 100%;
 }
 
-#character-list, #character-info {
-	border-right: 1px solid #ccc;
+#character-list, #character-info, #character-item-list {
+	border-left: 1px solid #ccc;
 }
 
 #character-title {
@@ -25,8 +25,17 @@ html, body {
 	vertical-align: middle;
 }
 
-span.glyphicon-plus, span.glyphicon-edit, span.glyphicon-trash {
-    font-size: 1.6em;
+#help-icons {
+	font-size: 0.2em;
+}
+
+#page-icons {
+    font-size: 1.5em;
+}
+
+#help {
+	padding-top: 18px;
+	padding-right: 18px;
 }
 
 .white, .white a {
