--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -2,6 +2,11 @@ html, body {
 	height: 100%;
 }
 
+/* Default hidden. */
+.loader {
+    display: none;
+}
+
 #character-list, #character-info, #character-item-list {
 	border-left: 1px solid #ccc;
 }
