added one last comment

--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -1,4 +1,4 @@
-/* JD: Wow, what impeccably-formatted and -commented CSS code! */
+/* Give html and body a height of 100%. */
 html, body {
 	height: 100%;
 }
