--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -16,3 +16,9 @@
     -moz-box-shadow: 0px 0px 6px #88F;
     -webkit-box-shadow: 0px 0px 6px #88F;
 }
+
+.box-delete {
+	box-shadow: 0px 0px 6px #F00;
+    -moz-box-shadow: 0px 0px 6px #F00;
+    -webkit-box-shadow: 0px 0px 6px #F00;
+}
