--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -18,7 +18,13 @@
 }
 
 .box-delete {
-	box-shadow: 0px 0px 6px #F00;
-    -moz-box-shadow: 0px 0px 6px #F00;
-    -webkit-box-shadow: 0px 0px 6px #F00;
+	box-shadow: 0px 0px 6px #F88;
+    -moz-box-shadow: 0px 0px 6px #F88;
+    -webkit-box-shadow: 0px 0px 6px #F88;
+}
+
+.box-create {
+    box-shadow: 0px 0px 6px #8F8;
+    -moz-box-shadow: 0px 0px 6px #8F8;
+    -webkit-box-shadow: 0px 0px 6px #8F8;
 }
