--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -12,18 +12,21 @@
 }
 
 .box-highlight {
+    border: thin solid blue;
     box-shadow: 0px 0px 6px #88F;
     -moz-box-shadow: 0px 0px 6px #88F;
     -webkit-box-shadow: 0px 0px 6px #88F;
 }
 
 .box-delete {
+    border: thin solid red;
 	box-shadow: 0px 0px 6px #F88;
     -moz-box-shadow: 0px 0px 6px #F88;
     -webkit-box-shadow: 0px 0px 6px #F88;
 }
 
 .box-create {
+    border: thin solid green;
     box-shadow: 0px 0px 6px #8F8;
     -moz-box-shadow: 0px 0px 6px #8F8;
     -webkit-box-shadow: 0px 0px 6px #8F8;
