--- a/widget-from-scratch/jquery.drag-select.css
+++ b/widget-from-scratch/jquery.drag-select.css
@@ -4,3 +4,11 @@
     -moz-user-select: none;
     -webkit-user-select: none;
 }
+
+.alignRight {
+	float: right;
+}
+
+.alignLeft {
+	float: left;
+}
