added CSS to make the drag-select look nicer

--- a/widget-from-scratch/jquery.drag-select.css
+++ b/widget-from-scratch/jquery.drag-select.css
@@ -1,14 +1,36 @@
 .drag-select {
-    border: 1px solid black;
-    padding: 4px 6px;
-    -moz-user-select: none;
-    -webkit-user-select: none;
+    border: 1px solid #3090C7;
+    background: #3090C7;
+    border-radius: 5px;  
+/*    -moz-user-select: none;
+    -webkit-user-select: none;*/
+    position: absolute;
+    padding-top: 0.25%;
+    padding-bottom: 0.25%;
+    padding-left: 0.25%;
+    padding-right: 0.25%;
 }
 
-.alignRight {
+.selector {
+	width: 35%;
+	height: 93%;
+	border: 1px solid black;
+	border-radius: 3px;
+	z-index: 10;
+	position: absolute;
+}
+
+.rightValue {
+	position: relative;
 	float: right;
+	color: #FFF;
+	margin-right: 4%;
+	margin-top: 3%;
+
 }
 
-.alignLeft {
+.leftValue {
+	position: relative;
 	float: left;
+	color: #FFF;
 }
