--- a/widget-from-scratch/jquery.drag-select.css
+++ b/widget-from-scratch/jquery.drag-select.css
@@ -1,37 +1,51 @@
 .drag-select {
-    border: 1px solid #3090C7;
-    background: #3090C7;
+    border: 1px solid #1589FF;
+    background: #1589FF;
     border-radius: 5px;  
     -moz-user-select: none;
     -webkit-user-select: none;
     position: relative;
-    padding-top: 0.25%;
-    padding-bottom: 0.25%;
-    padding-left: 0.25%;
-    padding-right: 0.25%;
-    margin: 3px 3px 3px 3px;
+    padding-top: 3px;
+    padding-right: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    margin-top: 3px;
+    margin-right: 3px;
+    margin-bottom: 3px;
+    margin-left: 3px;
 }
 
-.selector {
+.switcher {
 	width: 35%;
-	height: 99%;
-	border: 1px solid black;
+	border: 1px solid #82CAFF;
+	background: #82CAFF;
 	border-radius: 3px;
 	z-index: 10;
+	position: absolute;
 }
 
-.rightValue {
-	right: 0;
+.rightUnactive {
 	color: #FFF;
 	position: absolute;
-	margin-right: 5%;
 	top: 50%;
 }
 
-.leftValue {
-	left: 0;
+.leftUnactive {
 	color: #FFF;
 	position: absolute;
-	margin-left: 5%;
 	top: 50%;
+}
+
+.rightActive {
+	color: #000;
+	position: absolute;
+	top: 50%;
+	z-index: 20;
+}
+
+.leftActive {
+	color: #000;
+	position: absolute;
+	top: 50%;
+	z-index: 20;
 }
