--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -3,6 +3,11 @@ html, body {
 	height: 100%;
 }
 
+.switch-container {
+	width: 506px;
+	height: 52px;
+}
+
 /* Default hidden. */
 .character-list-loader, .create-loader, .delete-loader, .edit-loader {
     display: none;
